# melody

./: .clang-format  meson.build
src/: main.cc  meson.build
subprojects/: wlroots.wrap
